<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white" />

    <include
        layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />


    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/detail_accent_pane_background"
        app:columnCount="2">

        <TextView
            android:id="@+id/detail_humidity_label_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="Humidity" />

        <TextView
            android:id="@+id/detail_humidity_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="38%" />

        <TextView
            android:id="@+id/detail_pressure_label_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="Pressure" />

        <TextView
            android:id="@+id/detail_pressure_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="995 hPa" />

        <TextView
            android:id="@+id/detail_wind_label_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="Wind" />

        <TextView
            android:id="@+id/detail_wind_textview"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:text="4km/h NW" />

    </android.support.v7.widget.GridLayout>

    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />
</LinearLayout>